basic functions finished

--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^6.5.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tonybs03/Readme-Generator.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/tonybs03/Readme-Generator/issues"
+  },
+  "homepage": "https://github.com/tonybs03/Readme-Generator#readme"
 }
